# MyGameEngine

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: FindGLFW3.cmake
include/glad/: gl.h
